
add_subdirectory(publisher_test)
add_subdirectory(subscriber_test)
add_subdirectory(subscriber_test_new)
add_subdirectory(publisher_test_new)
add_subdirectory(subscriber_test_mocap)
add_subdirectory(subscriber_test_imghd)
add_subdirectory(publisher_test_img)
add_subdirectory(subscriber_test_position)
add_subdirectory(px4_sub_odom)
add_subdirectory(px4_sub_local_position)
add_subdirectory(px4_sub_vehicle_status)